# Multi-Factor-Alpha-Engine

./: .gitignore  Agentic AI Prompt_ Multi-Factor Equity Alpha Engin.md  LICENSE  README.md  config.yaml  features.yaml  project_build_log.txt  pyproject.toml  requirements.txt  run_pipeline.py  train.py
alpha_engine/: __init__.py  backtest.py  data.py  features.py  models.py  portfolio.py
data/raw/: .gitkeep
notebooks/: alpha_engine_demo.ipynb
plots/: .gitkeep
reports/: .gitkeep
results/: .gitkeep
tests/: conftest.py  test_data.py  test_models.py
